--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
-    "core-js": "^3.6.5",
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",  
     "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vuetify": "^3.0.0-alpha.0"
